syntax = "proto3";
option java_multiple_files = true;
package com.test.grpc.service;

import "SampleRequest.proto";
import "SampleResponse.proto";



service StreamRequestService {

  /**
      service consumes stream of requests and returns single response
   */
  rpc getRecordFromStream(stream com.test.grpc.model.request.SomeRequest) returns (com.test.grpc.model.response.SomeResponse);


  /**
      service consumes stream of requests and returns a stream of response
   */
  rpc getStreamFromStream(stream com.test.grpc.model.request.SomeRequest) returns (stream com.test.grpc.model.response.SomeResponse);

}